--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ font-family: 'Quicksand', sans-serif;
 .title
 {
 background-color:cornflowerblue ;
-text-align: left;
+text-align: center;
 height: 6vw;
 width: 100%;
 font-size:4vw;
