--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ ul li:hover{
 .maintext
 {
 background-color:cornflowerblue ;
-text-align: left;
+text-align: center;
 height: 6vw;
 width: 100%;
 font-size:2vw;
